# qipu

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  DEAD_CODE_AUDIT.md  FUTURE_PLAN.md  FUTURE_WORK.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  flake.nix  llm-tool-test-config.toml  package-lock.json  package.json  ralph  test_output.txt  vitest.config.ts
.beads/: .gitignore  README.md  config.yaml  interactions.jsonl  issues.jsonl
.beads/export-state/: 1ba987e2a24b0de3.json  325145567e5ec47b.json  f189813d61d34e87.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.qipu/mocs/: qp-1a08-test-note-records.md  qp-2396-test-note.md  qp-2b20-test-note.md  qp-3143-test-note-records.md  qp-3e4c-test-note.md  qp-43e0-test-note-records.md  qp-44a7-test-note-records.md  qp-6b9c-test-note.md  qp-bb3b-test-note.md  qp-be05-test-note-records.md  qp-c39a-test-note-records.md  qp-cd30-test-note-records.md  qp-d666-test-note.md  (+7 more)
.rpm/: qipu.spec
crates/llm-tool-test/: Cargo.toml  README.md  llm-tool-test-config.example.toml
crates/llm-tool-test/crates/llm-tool-test/fixtures/: timeout_test_override.yaml
crates/llm-tool-test/fixtures/: search_basic.yaml  test_setup_scenario.yaml
crates/llm-tool-test/fixtures/qipu/: AGENTS.md  capture_basic.yaml  compaction_workflow.yaml  context_retrieval.yaml  create_smoke.yaml  link_navigation.yaml  search_basic.yaml  setup_test.yaml
crates/llm-tool-test/fixtures/qipu/rubrics/: capture_v1.yaml  link_v1.yaml
crates/llm-tool-test/fixtures/qipu/scenarios/: capture_basic.yaml  link_navigation.yaml
crates/llm-tool-test/fixtures/templates/qipu/rubrics/: semantic_quality.yaml
crates/llm-tool-test/src/: cli.rs  commands.rs  config.rs  eval_helpers.rs  eval_tests_doctor.rs  eval_tests_gates.rs  eval_tests_score.rs  evaluation.rs  fixture.rs  judge.rs  main.rs  output.rs  pricing.rs  results.rs  run.rs  scenario.rs  session.rs  store_analysis.rs  transcript.rs  utils.rs
crates/llm-tool-test/src/adapter/: amp.rs  claude_code.rs  mock.rs  mock_test.rs  mod.rs  opencode.rs
crates/llm-tool-test/src/judge/: eval.rs  mod.rs  rubric.rs  tests.rs  types.rs
crates/llm-tool-test/src/results/: cache.rs  db.rs  results_test_helpers.rs  test_helpers.rs  types.rs  utils.rs
crates/llm-tool-test/src/results/types/: cache_key.rs  mod.rs  tests.rs
crates/llm-tool-test/src/run/: cache.rs  execution.rs  mod.rs  records.rs  setup.rs  tests.rs  transcript.rs  utils.rs
crates/llm-tool-test/src/scenario/: mod.rs  tests.rs  types.rs
crates/llm-tool-test/src/scenario/tests/: basic.rs  gates.rs  mod.rs  run_config.rs  setup.rs
crates/llm-tool-test/src/transcript/: analyzer.rs  mod.rs  redact.rs  types.rs  writer.rs
crates/llm-tool-test/src/transcript/tests/: analyzer.rs  logging_tests.rs  redact.rs  writer_tests.rs
crates/llm-tool-test/tests/: cli.rs  support.rs
crates/qipu-core/: Cargo.toml
crates/qipu-core/src/: config.rs  error.rs  format.rs  git.rs  id.rs  lib.rs  logging.rs  ontology.rs  records.rs
crates/qipu-core/src/compaction/: context.rs  expansion.rs  mod.rs  suggestion.rs  validation.rs
crates/qipu-core/src/config/: global.rs  types.rs
crates/qipu-core/src/db/: edges.rs  edges_insert_helper.rs  indexing.rs  mod.rs  query_stats.rs  rebuild.rs  repair.rs  schema.rs  search.rs  traverse.rs  validate.rs
crates/qipu-core/src/db/notes/: create.rs  delete.rs  helpers.rs  insert_helper.rs  mod.rs  read.rs
crates/qipu-core/src/db/tests/: backlinks.rs  benchmarks.rs  consistency.rs  mod.rs  open.rs  rebuild.rs  repair.rs  schema.rs  search.rs  traversal.rs
crates/qipu-core/src/db/tests/benchmarks/: backlinks.rs  list.rs  mod.rs  search.rs  traversal.rs
crates/qipu-core/src/error/: macros.rs
crates/qipu-core/src/graph/: bfs.rs  mod.rs  traversal.rs  types.rs
crates/qipu-core/src/graph/algos/: bfs.rs  dijkstra.rs  mod.rs  shared.rs
crates/qipu-core/src/graph/algos/dijkstra/: tests.rs
crates/qipu-core/src/graph/bfs/: path.rs  tests.rs
crates/qipu-core/src/index/: builder.rs  links.rs  mod.rs  types.rs  weights.rs
crates/qipu-core/src/note/: frontmatter.rs  mod.rs  parse.rs  types.rs
crates/qipu-core/src/query/: custom_filter.rs  filter.rs  mod.rs
crates/qipu-core/src/query/tests/: filter.rs
crates/qipu-core/src/search/: mod.rs
crates/qipu-core/src/similarity/: calculation.rs  duplicates.rs  graph.rs  mod.rs  tags.rs  tests.rs  tfidf.rs
crates/qipu-core/src/store/: config.rs  guards.rs  io.rs  lifecycle.rs  mod.rs  notes.rs  paths.rs  query.rs  tests.rs  typed_paths.rs  workspace.rs
crates/qipu-core/src/telemetry/: aggregation.rs  collector.rs  endpoint.rs  events.rs  mod.rs  privacy_manifest.rs  uploader.rs
crates/qipu-core/src/text/: markdown.rs  mod.rs
crates/qipu-core/tests/: ontology.rs
distribution/: README.md  setup-homebrew-tap.sh
docs/: RELEASE.md  attachments.md  building-on-qipu.md  custom-ontology.md  llm-testing.md  usage-patterns.md  workflows.md
llm-test-fixtures/: capture_basic.yaml  compaction_workflow.yaml  context_retrieval.yaml  create_smoke.yaml  hello_validation.yaml  link_navigation.yaml  search_basic.yaml  setup_test.yaml  test_setup_scenario.yaml
prompts/: build.txt  cleanup.txt  plan.txt
scripts/: check_function_complexity.py  install.ps1  install.sh
skills/: INSTALL.md  README.md  github-copilot.json  mcp-server.json  opencode.json
specs/: README.md  cli-interface.md  cli-tool.md  compaction.md  custom-metadata.md  distribution.md  export.md  graph-traversal.md  indexing-search.md  knowledge-model.md  llm-context.md  llm-user-validation.md  operational-database.md  pack.md  progressive-indexing.md  provenance.md  records-output.md  semantic-graph.md  similarity-ranking.md  storage-format.md  structured-logging.md  telemetry.md  token-optimized-output.md  value-model.md  workspaces.md
src/: cli.rs  cli.ts  index.ts  main.rs
tests/: bench_tests.rs  binary_tests.rs  cli_tests.rs  common.rs  golden_tests.rs  llm_validation.rs  pack_tests.rs  performance_tests.rs  workspace_from_note_test.rs  workspace_merge_test.rs  workspace_tests.rs
(+1162 files in other folders)
