[workspace]
members = [".", "crates/llm-tool-test"]

[package]
name = "qipu"
version = "0.2.6"
edition = "2021"
description = "A Zettelkasten-inspired knowledge management CLI for capturing and navigating research"
authors = ["Qipu Contributors"]
license = "MIT"
repository = "https://github.com/mwaldstein/qipu"
keywords = ["zettelkasten", "knowledge-management", "cli", "notes"]
categories = ["command-line-utilities"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# ID generation
sha2 = "0.10"
hex = "0.4"
ulid = "1"

# File system utilities
walkdir = "2"

# Slug generation
slug = "0.1"

# LLM Tokenization
tiktoken-rs = "0.5"

# Regular expressions for link extraction
regex = "1"
base64 = "0.22.1"
mime_guess = "2.0.5"

# SQLite database
rusqlite = { version = "0.31", features = ["bundled"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-attributes = "0.1"

# Text stemming
rust-stemmers = "1.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
