[workspace]
members = [".", "crates/llm-tool-test", "crates/qipu-core"]

[package]
name = "qipu"
version = "0.2.61"
edition = "2021"
description = "A Zettelkasten-inspired knowledge management CLI for capturing and navigating research"
authors = ["Qipu Contributors"]
license = "MIT"
repository = "https://github.com/mwaldstein/qipu"
keywords = ["zettelkasten", "knowledge-management", "cli", "notes"]
categories = ["command-line-utilities"]

[dependencies]
qipu-core = { path = "crates/qipu-core" }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Signal handling
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 64

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
