[workspace]
members = [".", "crates/qipu-core"]

[package]
name = "qipu"
version = "0.3.14"
edition = "2021"
description = "A Zettelkasten-inspired knowledge management CLI for capturing and navigating research"
authors = ["Qipu Contributors"]
license = "MIT"
repository = "https://github.com/mwaldstein/qipu"
keywords = ["zettelkasten", "knowledge-management", "cli", "notes"]
categories = ["command-line-utilities"]

[dependencies]
qipu-core = { path = "crates/qipu-core" }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Signal handling
ctrlc = "3.4"

# Structured logging
tracing = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# TOML parsing (for tests)
toml = "0.8"

# Regular expressions
regex = { version = "1", default-features = false, features = ["std", "unicode"] }

# Base64 encoding
base64 = "0.22.1"

# MIME type detection
mime_guess = "2.0.5"

# File system utilities
walkdir = "2"

# Slug generation
slug = "0.1"

# Interactive prompts (fzf-style pickers)
inquire = { version = "0.9", default-features = false, features = ["termion"] }
atty = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# SQLite for tests
rusqlite = { version = "0.31", features = ["bundled"] }

# LLM tool testing - standalone project for testing qipu with LLM agents
# Install: cargo install --path ../llm-tool-test
# llm-tool-test = { path = "../llm-tool-test" }

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 64

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
