[package]
name = "llm-tool-test"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
portable-pty = "0.8"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1.10"
wait-timeout = "0.2"
shlex = "1.3"

[dev-dependencies]
tempfile = "3.24.0"

