[package]
name = "qipu-core"
version = "0.3.32"
edition = "2021"
description = "Core domain logic for Qipu knowledge management system"
authors = ["Qipu Contributors"]
license = "MIT"
repository = "https://github.com/mwaldstein/qipu"
keywords = ["zettelkasten", "knowledge-management"]
categories = ["data-structures"]

[lints]
workspace = true

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "serde_yml", version = "0.0.12" }
toml = "1.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# ID generation
sha2 = "0.11"
hex = "0.4"
ulid = "1"

# File system utilities
walkdir = "2"
dirs = "6"

# Slug generation
slug = "0.1"

# Regular expressions for link extraction
regex = { version = "1", default-features = false, features = ["std", "unicode"] }
base64 = "0.22.1"
mime_guess = "2.0.5"

# SQLite database
rusqlite = { version = "0.39", features = ["bundled"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "json", "fmt"] }
tracing-attributes = "0.1"

# HTTP client for telemetry (minimal, synchronous)
ureq = { version = "3", default-features = false, features = ["rustls"] }

# Text stemming
rust-stemmers = "1.2"

[dev-dependencies]
tempfile = "3"
